projects/lungmen.akn/dist/infrastructure/kubernetes/cert-manager/apps.v1.Deployment.cert-manager-cainjector.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cainjector
    app.kubernetes.io/component: cainjector
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cainjector
    app.kubernetes.io/version: v1.20.2
    helm.sh/chart: cert-manager-v1.20.2
  name: cert-manager-cainjector
  namespace: cert-manager-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: cainjector
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: cainjector
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9402"
        prometheus.io/scrape: "true"
      labels:
        app: cainjector
        app.kubernetes.io/component: cainjector
        app.kubernetes.io/instance: cert-manager
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: cainjector
        app.kubernetes.io/version: v1.20.2
        helm.sh/chart: cert-manager-v1.20.2
    spec:
      containers:
      - args:
        - --v=2
        - --leader-election-namespace=kube-system
        image: oci.chezmoi.sh/quay.io/jetstack/cert-manager-cainjector:v1.20.2
        imagePullPolicy: IfNotPresent
        name: cert-manager-cainjector
        ports:
        - containerPort: 9402
          name: http-metrics
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: cert-manager-cainjector
