projects/lungmen.akn/dist/infrastructure/kubernetes/cert-manager/apps.v1.Deployment.cert-manager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cert-manager
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/version: v1.20.2
    helm.sh/chart: cert-manager-v1.20.2
  name: cert-manager
  namespace: cert-manager-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: cert-manager
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9402"
        prometheus.io/scrape: "true"
      labels:
        app: cert-manager
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: cert-manager
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: cert-manager
        app.kubernetes.io/version: v1.20.2
        helm.sh/chart: cert-manager-v1.20.2
    spec:
      containers:
      - args:
        - --v=2
        - --cluster-resource-namespace=$(POD_NAMESPACE)
        - --leader-election-namespace=kube-system
        - --acme-http01-solver-image=oci.chezmoi.sh/quay.io/jetstack/cert-manager-acmesolver:v1.20.2
        - --max-concurrent-challenges=60
        - --dns01-recursive-nameservers-only=true
        - --dns01-recursive-nameservers=9.9.9.9:53,149.112.112.112:53
        image: oci.chezmoi.sh/quay.io/jetstack/cert-manager-controller:v1.20.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 8
          httpGet:
            path: /livez
            port: http-healthz
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 15
        name: cert-manager-controller
        ports:
        - containerPort: 9402
          name: http-metrics
          protocol: TCP
        - containerPort: 9403
          name: http-healthz
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 34983
        runAsGroup: 34983
        runAsNonRoot: true
        runAsUser: 34983
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: cert-manager
