projects/lungmen.akn/dist/infrastructure/kubernetes/cert-manager/core.v1.Service.cert-manager-cainjector.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cainjector
    app.kubernetes.io/component: cainjector
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cainjector
    app.kubernetes.io/version: v1.20.2
    helm.sh/chart: cert-manager-v1.20.2
  name: cert-manager-cainjector
  namespace: cert-manager-system
spec:
  ports:
    - name: http-metrics
      port: 9402
      protocol: TCP
  selector:
    app.kubernetes.io/component: cainjector
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/name: cainjector
  type: ClusterIP
