projects/lungmen.akn/dist/infrastructure/kubernetes/cert-manager/cilium.io.v2.CiliumNetworkPolicy.allow-intra-namespace.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Permits intra-namespace communication in the cert-manager-system namespace.
  name: allow-intra-namespace
  namespace: cert-manager-system
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cert-manager-system
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cert-manager-system
